[package]
authors = ["Inky <47245667+Inky-developer@users.noreply.github.com>"]
edition = "2018"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
java-properties = "1.3"
lazy_static = "1.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
ureq = {version = "2.0", features = ["json"]}
